react/src/styles/App.module.scss
body * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    flex: none;
    appearance: none;
}


body {
    font-family: sans-serif;
    font-size: 13px;
    line-height: 14px;
    background-color: #f9f0f0;
    color: #333333;
}


input {
    background: transparent;
    border: none;
    outline: none;
    font-size: inherit;
    line-height: inherit;
}


textarea {
    background-color: transparent;
    border: none;
    resize: none;
    outline: none;
    font-size: inherit;
}


button {
    background-color: transparent;
    border: none;
    outline: none;
    font-size: inherit;
    line-height: inherit;
}


label {
    font-weight: initial;
}

ul {
    list-style:none;
}

a,
a:hover,
a:link {
    color: inherit;
    text-decoration: none;
}

table {
    border-spacing: 0;
}

.content {
    position: relative;
    width: calc(80vh + 384px + (12px * 2));
    margin-top: 55px;
    margin-left: auto;
    margin-right: auto;
    @media (orientation: portrait) {
        width: 100%;
    }


    .main-image + & {
        margin-top: 0;
    }


    &--no-scroll {
        height: calc(100vh - 55px);
        display: flex;
        flex-direction: row;
        justify-content: center;
    }


    &--timetable {
        @media (orientation: portrait) {
            flex-direction: column-reverse;
        }
    }
}


.main-image {
    height: 400px;
    background: url(../static/img/review/search/bg.jpg) center 0;
    background-size: 100% auto;
    padding-top: 191px;
    @media (orientation: portrait) {
        height: 200px;
        padding-top: 91px;
    }


    .main-search {
        padding: 12px;
        margin: 0 12px;
        display: flex;
        background-color: #ffffff;
        border-radius: 6px;
        box-shadow: 0 3px 0 0 #F3BEC6;
        font-size: 14px;
        line-height: 15px;


        i {
            flex: 0 0 auto;
            margin-right: 8px;
            width: 13px;
            background: url(../static/icons/tab_search.svg) no-repeat center center;
        }

        input {
            flex: 1 1 auto;
        }

        input::placeholder {
            color: #CCCCCC;
        }

        button {
            flex: 0 0 auto;
            margin-left: 8px;
        }
    }
}


.section-wrap {
    margin: 12px 12px 13px 12px;


    &.mobile-modal {
            @media (orientation: portrait) {
                position: absolute;
                top: 12px;
                left: 12px * 2;
                width: calc(100% - 12px * 4);
                height: calc(100% - (12px * 2 + 13px));

                & > * {
                    position: relative;
                    z-index: 200;
                }

                &::before {
                    content: '';
                    position: absolute;
                    width: calc(100% + 12px * 4);
                    height: calc(100% + (12px * 3 + 13px) + 55px);
                    top: -12px * 2 - 55px;
                    left: -12px * 2;
                    background-color: rgba(#000, 0.3);
                    z-index: 100;
                }
            }
    }


    &--main-search {
        width: calc(80vh + 384px + (12px * 2));
        margin: 0 auto;
        @media (orientation:portrait) {
            width: 100%
        }
    }


    &--course-list {
        flex: none;
        width: calc(40vh + 186px);
        margin-top: 0px;
        @media (orientation: portrait) {
            width: calc(100% - 12px * 2);
        }
    }


    &--course-detail {
        flex: none;
        width: calc(40vh + 186px);
        margin-top: 0px;
        margin-left: 0;
    }


    &--timetable-left {
        flex: none;
        width: calc(15vh + 126px);
        margin-top: 0px;
        display: flex;
        flex-direction: column;

        @media (orientation: portrait) {
           width: calc(100% - 12px * 2);
           flex: 1 1 100%;
           margin-top: 0;
        }
    }


    &--timetable-center-right {
        flex: none;
        width:  calc(65vh + 246px);
        margin-top: 0px;
        margin-left: 0;
        display: flex;
        flex-direction: column;

        @media (orientation: portrait) {
            width: calc(100% - 12px * 2);
            margin-left: 12px;
            margin-bottom: 13px;;
            flex: 1 1 100%;
        }
    }


    &--timetable-right {
        flex: none;
        width: calc(15vh + 126px - 12px * 2);
        margin: 0;
        display: flex;
        flex-direction: column;
        @media (orientation: portrait) {
            width: 100%
        }
    }


    &--lecture-detail {
        flex: none;
        height: calc(5.6vh + 276px);
        margin-top: 0;
        margin-left: 0;
        margin-right: 0;
    }


    &--lecture-list {
        position: relative;
        flex: 1 1 100%;
        margin: 0;
    }


    &--timetable-tabs {
        flex: none;
        margin: 0;
        display: flex;
        flex-direction: row;

        & > div {
            width: 100%;
            display: flex;
            flex-direction: row;
            align-items: flex-start;
            @media (orientation: portrait) {
                height: 100%;
                padding: 12px;
                background-color: #ffffff;
                border-radius: 6px;
                box-shadow: 0 3px 0 0 #F3BEC6;
                flex-direction: column-reverse;
                align-items: center;
            }
        }
    }
}
/* ... */

